init commit for archive

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
-DB_NAME=database_name
-DB_USER=database_user
-DB_PASSWORD=database_password
-DB_HOST=database_host
+DB_NAME=ace_db
+DB_USER=root
+DB_PASSWORD=root
+DB_HOST=localhost
 
 WP_ENV=development
-WP_HOME=http://example.com
-WP_SITEURL=http://example.com/wp
+WP_HOME=http://acestl.dev
+WP_SITEURL=http://acestl.dev/wp
+AUTH_KEY='XLptv^-7wkK:+`5{!o[Y9w[`}2LeZ6-jd:Dz@j=,uD`mtW/~@-OHdyx`<8;NA^XE'
+SECURE_AUTH_KEY='@}4I:WCq{tCf^A;MhJ-k8dbV#:;?@SDJE,(AQgRCz)HbfDOn$uxHyz~:v];,CyC7'
+LOGGED_IN_KEY='sh,8nL:NqEPw7~JHj7%I=4EoOzh*XJK^QEK4^He=#TpGJZ$TsO<lerzSQGva&6&t'
+NONCE_KEY=':m]#U>4sI)Y*ExwX#k8&B.u*BQ(ejUxf6i*n/IFFn`jSoGc}Q@2*5[V,AA/J-vON'
+AUTH_SALT='Ds0A1+6^_&t:iv Z=KDYt{RTlO>+!DE|W+Aj[=]59e1*zJDs)6*?RvS29GUF!{Fs'
+SECURE_AUTH_SALT='&5CZYmqtq*/QmB9=,N+K8J|E&T!NFb5h7.6sh[My1K^%@K64]XbS,b 9VSi}U%,n'
+LOGGED_IN_SALT='90G&J(a:o^!{mDQ:}RO)TwPa^Y}vy-J.G^!&T!$8LKUY$:U0O.G,r_,=F-o40XY,'
+NONCE_SALT='zv9)+IND(,<S`HeECKyTrsMX?1oZk$SK.op}X3pCWc-NK](#ucsMv5:tsl)D]y$)'
